# substreams-inj

./: Cargo.toml  README.md  generator.json  substreams.yaml
.devcontainer/: docker-compose.yml
.graph-node/: config.toml
proto/: trades.proto
sql/: Cargo.toml  README.md  schema.sql  substreams.yaml
sql/src/: lib.rs
sql/src/pb/: mod.rs  sf.substreams.cosmos.v1.rs
src/: lib.rs
src/pb/: mod.rs  mydata.v1.rs  sf.cosmos.type.v2.rs  trades.v1.rs
