[package]
name = "choice_exchange"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
substreams = "0.6.0"
cosmrs = { version = "0.21.1", features = ["cosmwasm"] }

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
