[package]
name = "choice_exchange_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.6.1"
substreams-database-change = "2.0.0"
hex = "0.4.3"
prost = "0.13.5"
prost-types = "0.13.5"
anyhow = "1.0"
sha2 = "0.10.8"
time = { version = "0.3", features = ["formatting"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
